edit rescours_allocation owner_id owner_time

--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
@@ -41,7 +41,7 @@
   </div> -->
   <div class="select-box" v-show="ifSelectBoxShow">
     <div class="select-options">
-      <div class="sel-item">
+      <!-- <div class="sel-item">
         <span class="sel-item-title">显示选项：</span>
         <el-radio-group 
         v-model="filterCondition.conditionOne"
@@ -50,7 +50,7 @@
           <el-radio :label="1">全部</el-radio>
           <el-radio :label="2">仅显示差异</el-radio>
         </el-radio-group>
-      </div>
+      </div> -->
       <div class="sel-item">
         <span class="sel-item-title">任务状态：</span>
         <el-radio-group 
