--- a/资源负载页面自定义控件/resource_load_chart/html/resource_load.html
+++ b/资源负载页面自定义控件/resource_load_chart/html/resource_load.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,38 +10,32 @@
     <title>Document</title>
   </head>
 
-  <body>
-    <div id="resourceLoadChartsApp">
-      <!-- <div class="btn-lsit">
+  <body> -->
+<div id="resourceLoadChartsApp">
+  <!-- <div class="btn-lsit">
     <button class="btn-itme" id="refresh" @click="btnClick">
       qiehuan
     </button>
   </div> -->
-      <div class="chart-container">
-        <div class="chart-box">
-          <div class="title-box">资源利用率</div>
-          <div class="chart-content">
-            <div
-              class="resourceLoadCharts"
-              id="resourceUtilizationCharts"
-            ></div>
-          </div>
-        </div>
-        <div class="chart-box chart-box2" :style="{'z-index':zIndex}">
-          <div class="title-box">剩余可用性</div>
-          <div class="chart-content">
-            <div
-              class="resourceLoadCharts"
-              id="remainingAvailabilityCharts"
-            ></div>
-          </div>
-        </div>
+  <div class="chart-container">
+    <div class="chart-box">
+      <div class="title-box">资源利用率</div>
+      <div class="chart-content">
+        <div class="resourceLoadCharts" id="resourceUtilizationCharts"></div>
       </div>
     </div>
-    <script src="../js/vue.min.js"></script>
+    <div class="chart-box chart-box2" :style="{'z-index':zIndex}">
+      <div class="title-box">剩余可用性</div>
+      <div class="chart-content">
+        <div class="resourceLoadCharts" id="remainingAvailabilityCharts"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <script src="../js/vue.min.js"></script>
     <script src="../js/echarts.min.js"></script>
     <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
