--- a/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
@@ -42,7 +42,7 @@
       ref="resourceAllocationTable"
       :header-cell-style="{height:'60px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}"
       :data="tableData"
-      style="width: 100%;"
+      style="width: 100%"
       :cell-style="cellStyle"
       row-key="id"
       :border="true"
@@ -79,17 +79,23 @@
         width="100"
       ></el-table-column>
       <el-table-column
-        prop="quality_action"
         v-if="getFieldShow('quality_action')"
-        label="纠偏措施"
+        label="处理措施"
         width="120"
       >
+        <template slot-scope="scope">
+          <div
+            v-show="scope.row.quality_action!==''"
+            class="quality-action"
+            @click="showMeasures(scope.row)"
+          >
+            查看详情
+          </div>
+        </template>
       </el-table-column>
       <el-table-column label="工时" v-if="getFieldShow('duration')" width="80">
         <template slot-scope="scope">
-          <div>
-            ${ scope.row.duration }
-          </div>
+          <div>${ scope.row.duration }</div>
         </template>
       </el-table-column>
       <el-table-column
@@ -98,9 +104,7 @@
         width="160"
       >
         <template slot-scope="scope">
-          <div>
-            ${ scope.row.base_plan_starttime }
-          </div>
+          <div>${ scope.row.base_plan_starttime }</div>
           <!-- <div v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
             ${ scope.row.plan_starttime }
           </div>
@@ -120,9 +124,7 @@
           <!-- <div  v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
             ${ scope.row.plan_endtime }
           </div> -->
-          <div>
-            ${ scope.row.base_plan_endtime }
-          </div>
+          <div>${ scope.row.base_plan_endtime }</div>
           <!-- <div class="type-one" v-show="scope.row.task_type==='1'">
             <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
               ${ item.plan_endtime }
@@ -173,25 +175,15 @@
       <el-table-column label="阶段" width="160">
         <template slot-scope="scope">
           <div class="recheck-box" v-show="scope.row.task_type==='3'">
-            <div class="recheck-top">
-              首次复核
-            </div>
+            <div class="recheck-top">首次复核</div>
             <div class="recheck-mid">
-              <div class="mid-left">
-                整改
-              </div>
+              <div class="mid-left">整改</div>
               <div class="mid-right">
-                <div class="mid-right-item mid-right-top">
-                  修改
-                </div>
-                <div class="mid-right-item">
-                  修改确认
-                </div>
+                <div class="mid-right-item mid-right-top">修改</div>
+                <div class="mid-right-item">修改确认</div>
               </div>
             </div>
-            <div class="recheck-bot">
-              复核确认
-            </div>
+            <div class="recheck-bot">复核确认</div>
           </div>
         </template>
       </el-table-column>
@@ -213,7 +205,7 @@
           </div>
           <div
             class="checek-man"
-            style="border: none;"
+            style="border: none"
             v-show="scope.row.task_type==='3'"
           >
             ${ scope.row.subArray[scope.row.subArray.length-1].confirm_duration
@@ -250,7 +242,7 @@
           </div>
           <div
             class="checek-man"
-            style="border: none;"
+            style="border: none"
             v-show="scope.row.task_type==='3'"
           >
             ${ scope.row.subArray[scope.row.subArray.length-1].owner_role }
@@ -299,7 +291,7 @@
           </div>
           <div
             class="checek-man"
-            style="border: none;"
+            style="border: none"
             v-show="scope.row.task_type==='3'"
           >
             <span v-if="scope.row.subArray[0].isreply==='2'"
@@ -345,7 +337,7 @@
           </div>
           <div
             class="checek-man"
-            style="border: none;"
+            style="border: none"
             v-show="scope.row.task_type==='3'"
           >
             ${ scope.row.subArray[scope.row.subArray.length-1].skill }
