--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/html/resources_report_measures.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/html/resources_report_measures.html
@@ -18,7 +18,7 @@
       max-height="440"
       :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}"
       :data="tableData"
-      style="width: 100%; margin: 10px 0 10px 0;"
+      style="width: 100%; margin: 10px 0 10px 0"
       :cell-style="cellStyle"
       row-key="task_id"
       :border="true"
@@ -167,7 +167,7 @@
           </el-select>
         </template>
       </el-table-column>
-      <el-table-column label="措施决策" align="center" min-width="300">
+      <el-table-column label="处理措施" align="center" min-width="300">
         <template slot-scope="scope">
           <el-input
             size="mini"
@@ -175,18 +175,14 @@
             @change="inputChange(scope.row)"
             :disabled="scope.row.is_deal_with"
             maxlength="50"
-            placeholder="请输入决策措施"
+            placeholder="请输入处理措施"
           ></el-input>
         </template>
       </el-table-column>
       <el-table-column label="状态" width="80" align="center">
         <template slot-scope="scope">
-          <div v-if="scope.row.is_deal_with">
-            已处理
-          </div>
-          <div v-else>
-            未处理
-          </div>
+          <div v-if="scope.row.is_deal_with">已处理</div>
+          <div v-else>未处理</div>
         </template>
       </el-table-column>
     </el-table>
