--- a/区块链存证/blockchain_certificate/html/blockchain_certificate.html
+++ b/区块链存证/blockchain_certificate/html/blockchain_certificate.html
@@ -63,6 +63,7 @@
         </div>
       </div>
     </div>
+    <script src="../js/jquery.js"></script>
     <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
