--- a/网络图/net_pic/html/net_pic.html
+++ b/网络图/net_pic/html/net_pic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,7 +10,7 @@
   <title>Document</title>
 </head>
 
-<body>
+<body> -->
 <div
   id="netPicApp"
   class="network-box"
@@ -110,7 +110,7 @@
     </div>
   </div>
 </div>
-    <script src="../js/lq.js"></script>
+    <!-- <script src="../js/lq.js"></script>
     <script src="../js/dag.js"></script>
     <script src="../js/layoutfix.js"></script>
     <script src="../js/viz.js"></script>
@@ -122,4 +122,4 @@
     <script src="../js/localforage.min.js"></script>
     <script src="../js/test.js" type="module"></script>
 </body>
-</html>
+</html> -->
