--- a/pdf预览测试demo/pdfview_test/html/check_records.html
+++ b/pdf预览测试demo/pdfview_test/html/check_records.html
@@ -19,7 +19,7 @@
       @description  头像墙自定义空页面布局
      -->
   <div id="checkRecordsApp">
-    测试pdf预览
+    <el-button @click="pdfViewTest">测试pdf预览</el-button>
   </div>
   <!-- <script src="../js/lodash.js"></script>
   <script src="../js/vue.min.js"></script>
