--- a/资源负载页面自定义控件/resource_load_table_v1.1/html/resource_load_table.html
+++ b/资源负载页面自定义控件/resource_load_table_v1.1/html/resource_load_table.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
 
-  <body> -->
+  <body>
 <div id="resourceLoadTableApp">
   <span class="table-title">详细信息：</span>
   <div class="table-box">
@@ -119,8 +119,8 @@
     </div>
   </div>
 </div>
-<!-- <script src="../js/vue.min.js"></script>
+<!-- <script src="../js/vue.min.js"></script> -->
     <script src="../js/vue.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html> -->
+</html>
