--- a/区块链存证/blockchain_certificate/html/blockchain_certificate.html
+++ b/区块链存证/blockchain_certificate/html/blockchain_certificate.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -10,7 +10,7 @@
 
     <title>Document</title>
   </head>
-  <body> -->
+  <body>
     <div id="bcCertificateApp">
       <div class="content">
         <div class="table-box">
@@ -107,10 +107,10 @@
         </el-dialog>
       </div>
     </div>
-    <!-- <script src="../js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
     <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html> -->
+</html>
